--- a/src/app/app-layout/footer/footer.component.html
+++ b/src/app/app-layout/footer/footer.component.html
@@ -1,170 +1,67 @@
-<footer class="footer footer-2">
-  <div class="icon-boxes-container">
-      <div class="container">
-          <div class="row">
-              <div class="col-sm-6 col-lg-3">
-                  <div class="icon-box icon-box-side">
-                      <span class="icon-box-icon text-dark">
-                          <i class="icon-rocket"></i>
-                      </span>
-                      <div class="icon-box-content">
-                          <h3 class="icon-box-title">Free Shipping</h3><!-- End .icon-box-title -->
-                          <p>orders $50 or more</p>
-                      </div><!-- End .icon-box-content -->
-                  </div><!-- End .icon-box -->
-              </div><!-- End .col-sm-6 col-lg-3 -->
+<div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
+  <div class="container py-5">
+      <div class="row g-5">
+          <!-- Thông tin liên hệ -->
+          <div class="col-md-6 col-lg-6 col-xl-3">
+              <div class="footer-item d-flex flex-column">
+                  <h4 class="text-secondary mb-4">Thông tin liên hệ</h4>
+                  <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Đường ABC, Hà Nội, Việt Nam</a>
+                  <a href=""><i class="fas fa-envelope me-2"></i> info@visaexample.com</a>
+                  <a href=""><i class="fas fa-phone me-2"></i> +012 345 6789</a>
+                  <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 6789</a>
+                  <div class="d-flex align-items-center">
+                      <i class="fas fa-share fa-2x text-secondary me-2"></i>
+                      <a class="btn mx-1" href=""><i class="fab fa-facebook-f"></i></a>
+                      <a class="btn mx-1" href=""><i class="fab fa-twitter"></i></a>
+                      <a class="btn mx-1" href=""><i class="fab fa-instagram"></i></a>
+                      <a class="btn mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                  </div>
+              </div>
+          </div>
 
-              <div class="col-sm-6 col-lg-3">
-                  <div class="icon-box icon-box-side">
-                      <span class="icon-box-icon text-dark">
-                          <i class="icon-rotate-left"></i>
-                      </span>
+          <!-- Giờ làm việc -->
+          <div class="col-md-6 col-lg-6 col-xl-3">
+              <div class="footer-item d-flex flex-column">
+                  <h4 class="text-secondary mb-4">Giờ làm việc</h4>
+                  <div class="mb-3">
+                      <h6 class="text-muted mb-0">Thứ Hai - Thứ Sáu:</h6>
+                      <p class="text-white mb-0">09:00 sáng đến 07:00 tối</p>
+                  </div>
+                  <div class="mb-3">
+                      <h6 class="text-muted mb-0">Thứ Bảy:</h6>
+                      <p class="text-white mb-0">10:00 sáng đến 05:00 chiều</p>
+                  </div>
+                  <div class="mb-3">
+                      <h6 class="text-muted mb-0">Ngày nghỉ:</h6>
+                      <p class="text-white mb-0">Chủ Nhật là ngày nghỉ của chúng tôi</p>
+                  </div>
+              </div>
+          </div>
 
-                      <div class="icon-box-content">
-                          <h3 class="icon-box-title">Free Returns</h3><!-- End .icon-box-title -->
-                          <p>within 30 days</p>
-                      </div><!-- End .icon-box-content -->
-                  </div><!-- End .icon-box -->
-              </div><!-- End .col-sm-6 col-lg-3 -->
+          <!-- Dịch vụ của chúng tôi -->
+          <div class="col-md-6 col-lg-6 col-xl-3">
+              <div class="footer-item d-flex flex-column">
+                  <h4 class="text-secondary mb-4">Dịch vụ của chúng tôi</h4>
+                  <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Visa Du lịch</a>
+                  <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Visa Công tác</a>
+                  <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Visa Định cư</a>
+                  <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Visa Du học</a>
+                  <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Tư vấn Visa</a>
+                  <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Visa Làm việc</a>
+              </div>
+          </div>
 
-              <div class="col-sm-6 col-lg-3">
-                  <div class="icon-box icon-box-side">
-                      <span class="icon-box-icon text-dark">
-                          <i class="icon-info-circle"></i>
-                      </span>
-
-                      <div class="icon-box-content">
-                          <h3 class="icon-box-title">Get 20% Off 1 Item</h3><!-- End .icon-box-title -->
-                          <p>When you sign up</p>
-                      </div><!-- End .icon-box-content -->
-                  </div><!-- End .icon-box -->
-              </div><!-- End .col-sm-6 col-lg-3 -->
-
-              <div class="col-sm-6 col-lg-3">
-                  <div class="icon-box icon-box-side">
-                      <span class="icon-box-icon text-dark">
-                          <i class="icon-life-ring"></i>
-                      </span>
-
-                      <div class="icon-box-content">
-                          <h3 class="icon-box-title">We Support</h3><!-- End .icon-box-title -->
-                          <p>24/7 amazing services</p>
-                      </div><!-- End .icon-box-content -->
-                  </div><!-- End .icon-box -->
-              </div><!-- End .col-sm-6 col-lg-3 -->
-          </div><!-- End .row -->
-      </div><!-- End .container -->
-  </div><!-- End .icon-boxes-container -->
-
-<div class="footer-newsletter bg-image" style="background-image: url(assets/images/backgrounds/bg-2.jpg)">
-  <div class="container">
-    <div class="heading text-center">
-              <h3 class="title">Get The Latest Deals</h3><!-- End .title -->
-              <p class="title-desc">and receive <span>$20 coupon</span> for first shopping</p><!-- End .title-desc -->
-          </div><!-- End .heading -->
-
-          <div class="row">
-            <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-                  <form action="#">
-        <div class="input-group">
-          <input type="email" class="form-control" placeholder="Enter your Email Address" aria-label="Email Adress" aria-describedby="newsletter-btn" required>
-          <div class="input-group-append">
-            <button class="btn btn-primary" type="submit" id="newsletter-btn"><span>Subscribe</span><i class="icon-long-arrow-right"></i></button>
-          </div><!-- .End .input-group-append -->
-        </div><!-- .End .input-group -->
-                  </form>
-            </div><!-- End .col-sm-10 offset-sm-1 col-lg-6 offset-lg-3 -->
-          </div><!-- End .row -->
-  </div><!-- End .container -->
-</div><!-- End .footer-newsletter bg-image -->
-
-<div class="footer-middle">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-lg-6">
-          <div class="widget widget-about">
-            <img src="assets/images/demos/demo-2/logo.png" class="footer-logo" alt="Footer Logo" width="105" height="25">
-            <p>Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus. </p>
-            
-            <div class="widget-about-info">
-              <div class="row">
-                <div class="col-sm-6 col-md-4">
-                  <span class="widget-about-title">Got Question? Call us 24/7</span>
-                  <a href="tel:123456789">+0123 456 789</a>
-                </div><!-- End .col-sm-6 -->
-                <div class="col-sm-6 col-md-8">
-                  <span class="widget-about-title">Payment Method</span>
-                  <figure class="footer-payments">
-                  <img src="assets/images/payments.png" alt="Payment methods" width="272" height="20">
-                </figure><!-- End .footer-payments -->
-                </div><!-- End .col-sm-6 -->
-              </div><!-- End .row -->
-            </div><!-- End .widget-about-info -->
-          </div><!-- End .widget about-widget -->
-        </div><!-- End .col-sm-12 col-lg-3 -->
-
-        <div class="col-sm-4 col-lg-2">
-          <div class="widget">
-            <h4 class="widget-title">Information</h4><!-- End .widget-title -->
-
-            <ul class="widget-list">
-              <li><a href="about.html">About Molla</a></li>
-              <li><a href="#">How to shop on Molla</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="contact.html">Contact us</a></li>
-              <li><a href="login.html">Log in</a></li>
-            </ul><!-- End .widget-list -->
-          </div><!-- End .widget -->
-        </div><!-- End .col-sm-4 col-lg-3 -->
-
-        <div class="col-sm-4 col-lg-2">
-          <div class="widget">
-            <h4 class="widget-title">Customer Service</h4><!-- End .widget-title -->
-
-            <ul class="widget-list">
-              <li><a href="#">Payment Methods</a></li>
-              <li><a href="#">Money-back guarantee!</a></li>
-              <li><a href="#">Returns</a></li>
-              <li><a href="#">Shipping</a></li>
-              <li><a href="#">Terms and conditions</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul><!-- End .widget-list -->
-          </div><!-- End .widget -->
-        </div><!-- End .col-sm-4 col-lg-3 -->
-
-        <div class="col-sm-4 col-lg-2">
-          <div class="widget">
-            <h4 class="widget-title">My Account</h4><!-- End .widget-title -->
-
-            <ul class="widget-list">
-              <li><a href="#">Sign In</a></li>
-              <li><a href="cart.html">View Cart</a></li>
-              <li><a href="#">My Wishlist</a></li>
-              <li><a href="#">Track My Order</a></li>
-              <li><a href="#">Help</a></li>
-            </ul><!-- End .widget-list -->
-          </div><!-- End .widget -->
-        </div><!-- End .col-sm-64 col-lg-3 -->
-      </div><!-- End .row -->
-    </div><!-- End .container -->
-</div><!-- End .footer-middle -->
-
-<div class="footer-bottom">
-  <div class="container">
-    <p class="footer-copyright">Copyright © 2019 Molla Store. All Rights Reserved.</p><!-- End .footer-copyright -->
-    <ul class="footer-menu">
-      <li><a href="#">Terms Of Use</a></li>
-      <li><a href="#">Privacy Policy</a></li>
-    </ul><!-- End .footer-menu -->
-
-    <div class="social-icons social-icons-color">
-      <span class="social-label">Social Media</span>
-    <a href="#" class="social-icon social-facebook" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-    <a href="#" class="social-icon social-twitter" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-    <a href="#" class="social-icon social-instagram" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-    <a href="#" class="social-icon social-youtube" title="Youtube" target="_blank"><i class="icon-youtube"></i></a>
-    <a href="#" class="social-icon social-pinterest" title="Pinterest" target="_blank"><i class="icon-pinterest"></i></a>
-  </div><!-- End .soial-icons -->
-  </div><!-- End .container -->
-</div><!-- End .footer-bottom -->
-</footer><!-- End .footer -->
+          <!-- Đăng ký nhận bản tin -->
+          <div class="col-md-6 col-lg-6 col-xl-3">
+              <div class="footer-item">
+                  <h4 class="text-secondary mb-4">Đăng ký nhận bản tin</h4>
+                  <p class="text-white mb-3">Nhận thông tin mới nhất về dịch vụ visa và các chương trình ưu đãi từ chúng tôi.</p>
+                  <div class="position-relative mx-auto rounded-pill">
+                      <input class="form-control border-0 rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Nhập email của bạn">
+                      <button type="button" class="btn btn-primary rounded-pill position-absolute top-0 end-0 py-2 mt-2 me-2">Đăng ký</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
