--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,21 +1,26 @@
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="assets/images/demos/demo-2/slider/slide-1.jpg" alt="First slide">
+<div class="mainVisual position-relative mb-5">
+  <div class="swiper-container">
+    <div class="swiper reviewSwiper">
+      <div class="swiper-wrapper">
+        <ng-container *ngFor="let item of brands">
+          <div class="swiper-slide">
+            <div class="slider-content">
+              <img [src]="item.img" [alt]="item.alt" class="slide-img">
+              <div class="overlay"></div>
+              <div class="text-content">
+                <h1 class="slide-title">{{item.title}}</h1>
+                <p class="slide-description">{{item.description}}</p>
+                <button class="slide-button">{{item.buttonText}}</button>
+              </div>
+            </div>
+          </div>
+        </ng-container>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/demos/demo-2/slider/slide-2.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="assets/images/demos/demo-2/slider/slide-3.jpg" alt="Third slide">
-      </div>
+      <!-- Navigation buttons -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <!-- Pagination -->
+      <div class="swiper-pagination"></div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
+</div>
