--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-    <main class="main">
+    <main>
         <app-page-heading></app-page-heading>
         <router-outlet></router-outlet>
     </main>
