--- a/src/app/app-layout/post/post-form/post-form.component.css
+++ b/src/app/app-layout/post/post-form/post-form.component.css
@@ -3,7 +3,7 @@
     color: #333;
   }
   button {
-    background-color: #007bff;
+    background-color: #134a86;
     border: none;
   }
   button:hover {
