--- a/src/app/app-layout/header/header.component.html
+++ b/src/app/app-layout/header/header.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="col-lg-4 text-center text-lg-end">
       <div class="d-inline-flex align-items-center" style="height: 45px;">
-        <a href="#" class="text-muted me-2"> Help</a><small> / </small>
+        <a href="#" class="text-muted me-2"routerLink="/login"> Login</a><small> </small>
         <a href="#" class="text-muted mx-2"> Support</a><small> / </small>
         <a href="#" class="text-muted ms-2"> Contact</a>
       </div>
@@ -35,8 +35,8 @@
 <!-- Navbar & Hero Start -->
 <div class="container-fluid nav-bar p-0">
   <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 px-lg-5 py-3 py-lg-0">
-    <a href="" class="navbar-brand p-0">
-      <h1 class="display-5 text-secondary m-0"><img src="img/brand-logo.png" class="img-fluid" alt="">Travisa</h1>
+    <a routerLink="/" class="navbar-brand p-0" style="background-color: #134a86;">
+      <h1 class="display-5 text-secondary m-0"><img src="../../../assets/images/logo.png" class="img-fluid" alt="">KALIVISA</h1>
     </a>
     <!-- Mobile Menu Toggler -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
